Edit autoCompleteSearch func* *autoCompleteSearch now uses queryWeather func to return weather data based on location entered *autoCompleteSearch options are now divs not datalist + are clickable enabling querying of weather for location *minor styling to make options appear in a drop down list format *remove old country datalist from html

--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,19 @@ body {
 i.hidden {
   display: none;
 }
+
+#location-search {
+  position: relative;
+}
+
+#locations {
+  position: absolute;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#locations > span:hover {
+  background-color: blue;
+  cursor: pointer;
+}
