--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,12 @@ body {
   min-height: 100vh;
 }
 
-/* body {
-  background: radial-gradient(
-      ellipse at top left,
-      rgb(17, 131, 125),
-      transparent
-    ),
-    radial-gradient(ellipse at top right, rgb(61, 113, 255), transparent),
-    radial-gradient(ellipse at bottom, rgb(22, 22, 80), transparent), rgb(66, 66, 66);
-} */
+body {
+  background: radial-gradient(ellipse at top left, rgb(39, 80, 78), transparent),
+    radial-gradient(ellipse at top right, rgb(42, 54, 87), transparent),
+    radial-gradient(ellipse at bottom, rgb(17, 17, 34), transparent),
+    rgb(37, 37, 37);
+}
 
 :root {
   --weather-content-width: 60%;
@@ -56,6 +53,12 @@ i.hidden {
   flex: 10;
 }
 
+.header-title {
+  margin-top: 2rem;
+  color: white;
+  text-shadow: 0 0 20px black;
+}
+
 /* weather content */
 .weather-content {
   width: max(450px, var(--weather-content-width));
@@ -64,37 +67,17 @@ i.hidden {
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  border: 1px solid black;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 1rem;
   padding: 2rem;
   position: relative;
+  box-shadow: 0 0 20px black;
 }
 
 .location-header {
   text-align: center;
+  color: white;
 }
-
-.toggle-btns-container {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.toggle-btns-container > button {
-  appearance: none;
-  border: none;
-  --toggle-btn-bgc: #e2e2e2;
-  background-color: var(--toggle-btn-bgc);
-  padding: 0.3rem 0.5rem;
-  border-radius: 0.3rem;
-  transition: all 200ms ease-in-out;
-  &:hover {
-    background-color: color-mix(in srgb, var(--toggle-btn-bgc) 100%, black 20%);
-  }
-  &:active {
-    background-color: color-mix(in srgb, var(--toggle-btn-bgc) 100%, white 30%);
-  }
-}
-
 /* end weather content */
 
 /* weather data container */
@@ -111,7 +94,10 @@ i.hidden {
   width: 100%;
   display: grid;
   justify-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  background-color: black;
+  color: white;
+  border-radius: 1rem;
   padding: 1rem;
   gap: 1rem;
 }
@@ -143,6 +129,11 @@ i.hidden {
   grid-column: 2/3;
 }
 
+.curr-weather-time {
+  margin-top: 0.5rem;
+  font-size: 1.5rem;
+}
+
 .curr-weather-condition-container {
   grid-row: span 4;
   display: grid;
@@ -150,6 +141,10 @@ i.hidden {
   grid-template-columns: 1fr;
 }
 
+.curr-weather-condition-img {
+  height: 100px;
+  width: auto;
+}
 .curr-weather-condition {
   text-align: center;
 }
@@ -171,7 +166,10 @@ i.hidden {
   flex: 1 1 250px;
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  background-color: black;
+  color: white;
+  border-radius: 1rem;
   position: relative;
   padding: 1rem;
   gap: 1rem;
@@ -211,20 +209,61 @@ i.hidden {
   text-align: end;
 }
 
+.day-display-mintemp {
+  color: rgb(179, 179, 179);
+}
+
+.day-display-maxtemp {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
 .day-display-rain-chance {
   grid-column: 2/3;
   text-align: center;
 }
 
-.day-details-container {
-  /* flex: 1 1 250px; */
-  border: 1px solid black;
+.day-details-container:not(.hidden) {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.day-details-container > div[class$="-container"] {
+  flex: 1 1 200px;
+  /* border: 1px solid white; */
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: #1f1f1f;
+}
+
+.day-details-container > div[class$="-container"] > div[class$="-wrapper"] {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.day-details-container
+  > div[class$="-container"]
+  > div:not([class$="-wrapper"]) {
+  color: rgb(228, 228, 228);
 }
 
 .day-display-more-details {
   position: absolute;
   top: 0.5rem;
   left: 0.5rem;
+  font-size: 1.2rem;
+  transition: all 200ms ease-in-out;
+  &:hover {
+    cursor: pointer;
+    color: color-mix(in srgb, white 100%, black 40%);
+  }
 }
 
 /* .day-display-maxtemp {
@@ -245,6 +284,10 @@ i.hidden {
   gap: 1rem;
 }
 
+.fa-solid.fa-search {
+  color: white;
+}
+
 .searchbar-container {
   width: 100%;
   display: flex;
@@ -261,23 +304,26 @@ i.hidden {
 
 #location-search {
   flex: 1;
+  font-size: 1rem;
   padding: 0.5rem 1rem;
-  border-radius: 1rem;
+  border-radius: 2rem;
   border: none;
-  --location-search-bgc: #e4e4e4;
+  --location-search-bgc: #000000;
+  color: white;
   background-color: var(--location-search-bgc);
   transition: all 200ms ease-in-out;
   &:hover {
     background-color: color-mix(
       in srgb,
       var(--location-search-bgc) 100%,
-      white 40%
+      white 20%
     );
   }
 }
 
 #locations {
-  background-color: #e4e4e4;
+  background-color: #222222;
+  color: white;
   width: 100%;
   position: absolute;
   top: 2rem;
@@ -295,14 +341,41 @@ i.hidden {
 }
 
 #locations > span:hover {
-  background-color: color-mix(in srgb, white 100%, black 30%);
+  background-color: color-mix(in srgb, black 100%, white 30%);
   cursor: pointer;
 }
+
+.toggle-btns-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.toggle-btns-container > button {
+  appearance: none;
+  color: white;
+  border: none;
+  /* --toggle-btn-bgc: #e2e2e2; */
+  /* background-color: var(--toggle-btn-bgc); */
+  background-color: black;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.3rem;
+  transition: all 200ms ease-in-out;
+  &:hover {
+    cursor: pointer;
+    background-color: white;
+    color: black;
+  }
+  &:active {
+    background-color: color-mix(in srgb, white 100%, black 20%);
+  }
+}
+
 /* end searchbar */
 
 /* footer */
 .footer-container {
-  background-color: grey;
+  background-color: rgb(19, 19, 19);
   width: 100%;
   padding: 1rem;
 }
@@ -312,6 +385,14 @@ i.hidden {
   justify-content: center;
   align-items: center;
   gap: 3rem;
+}
+
+.links > a {
+  display: flex;
+  gap: 0.5rem;
+  text-decoration: none;
+  align-items: center;
+  color: white;
 }
 /* end footer */
 
